--- a/5.Wireframe/about.html
+++ b/5.Wireframe/about.html
@@ -7,15 +7,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
-  <!-- Подключаем общий файл стилей -->
+
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Шапка сайта (используется тот же header, что и на других страницах) -->
+
   <header>
     <div class="header__logo">
-      <img src="img/logo.webp" alt="Логотип World of Warcraft">
-      <span class="header__tagline">World of Warcraft</span>
+      <img src="img/logo.webp" alt="Логотип Dota 2">
+      <span class="header__tagline">Dota 2 </span>
     </div>
     <nav class="header__menu">
       <a href="index.html">Главная</a>
@@ -26,23 +26,24 @@
     <button class="header__login-btn">Войти</button>
   </header>
   
-  <!-- Основной контент -->
+
   <main>
-    <!-- Информация о компании -->
+
     <section class="about__intro">
       <h1>О нашей компании</h1>
-      <p>Мы создаём легендарные игры уже более 20 лет. Наша команда специалистов вложила душу в каждый проект, чтобы вы смогли окунуться в мир фантазии и эпических сражений. World of Warcraft — это не только игра, но и настоящее приключение в огромном виртуальном мире.</p>
+      <p>Valve Corporation — ведущая компания в игровой индустрии, основанная в 1996 году Гейбом Ньюэллом и Майком Харрингтоном. Valve занимается разработкой культовых игр, таких как Half-Life, Counter-Strike, Dota 2 и Portal, а также созданием платформы Steam — крупнейшего магазина цифровой дистрибуции игр.
+        Компания активно развивает киберспорт, организуя крупные турниры, включая The International по Dota 2. Valve также инвестирует в инновации, такие как движок Source и виртуальная реальность с гарнитурой Valve Index. Поддерживая сообщество и развивая технологии, Valve задает новые стандарты в игровой индустрии.</p>
     </section>
     
-    <!-- Видео-презентация -->
+
     <section class="about__video">
       <h2>Видео-презентация</h2>
-      <iframe class="video__iframe" src="https://www.youtube.com/embed/xyPzTywUBsQ?si=1lAmTQpK8CchVpKQ" title="Видео о ивенте" allowfullscreen></iframe>
+      <iframe class="video__iframe" src="https://www.youtube.com/embed/Rc3bXuOLrig" title="Видео о ивенте" allowfullscreen></iframe>
     </section>
     
-    <!-- Фотогалерея проектов -->
+
     <section class="about__gallery">
-      <h2>Warcraft 30th Anniversary Celebration Events</h2>
+      <h2>Dota 2 </h2>
       <figure class="gallery">
         <figure class="gallery__item">
           <img src="img/worldtour.webp" alt="Проект 1">
@@ -51,7 +52,6 @@
     </section>
   </main>
   
-  <!-- Подвал сайта (такой же, как и на других страницах) -->
   <footer>
     <nav class="footer__menu">
       <a href="index.html">Главная</a>
@@ -60,29 +60,29 @@
     </nav>
     <ul class="footer__social">
       <li>
-        <a href="https://x.com/warcraft" class="footer__link">
+        <a href="https://x.com/DOTA2?mx=2" class="footer__link">
           <img src="img/socials/x.png" alt="TwitterX link">
         </a>
       </li>
       <li>
-        <a href="https://www.instagram.com/warcraft/" class="footer__link">
+        <a href="https://www.instagram.com/dota_2/" class="footer__link">
           <img src="img/socials/instagram.png" alt="Instagram link">
         </a>
       </li>
       <li>
-        <a href="https://www.facebook.com/Warcraft/" class="footer__link">
+        <a href="https://www.facebook.com/dota2/" class="footer__link">
           <img src="img/socials/facebook.png" alt="Facebook link">
         </a>
       </li>
       <li>
-        <a href="https://www.youtube.com/user/worldofwarcraft" class="footer__link">
+        <a href="https://www.youtube.com/user/dota2/videos" class="footer__link">
           <img src="img/socials/youtube.webp" alt="YouTube link">
         </a>
       </li>
     </ul>
   </footer>
   
-  <!-- Подключение скриптов (если необходимо) -->
+
   <script src="js/button.js" defer></script>
 </body>
 </html>
