--- a/5.Wireframe/market.html
+++ b/5.Wireframe/market.html
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Шапка сайта -->
+
   <header>
     <div class="header__logo">
-      <img src="img/logo.webp" alt="Логотип World of Warcraft" />
-      <span class="header__tagline">World of Warcraft</span>
+      <img src="img/logo.webp" alt="Логотип Dota 2" />
+      <span class="header__tagline">Dota 2 </span>
     </div>
     <nav class="header__menu">
       <a href="index.html">Главная</a>
@@ -25,43 +25,40 @@
     <button class="header__login-btn">Войти</button>
   </header>
 
-  <!-- Основной контент -->
+
   <main class="cart">
     <h1>Ваша корзина</h1>
     <section class="cart__list">
-      <!-- Элемент корзины 1 -->
+
       <article class="cart__item">
         <h1>1.</h1>
-        <img src="img/products/1.jpeg" alt="Позолоченный брутозавр торговца" />
+        <img src="img/products/1.jpeg" alt="Аркана на фантом лансер" />
         <div class="cart__item-info">
-          <h2>Позолоченный брутозавр торговца</h2>
-          <p>Стоимость: 80 евро</p>
+          <h2>Аркана на фантом лансер</h2>
+          <p>Стоимость: 25 евро</p>
           <p>Количество: 2</p>
-          <p>Итого: 160 евро</p>
+          <p>Итого: 50 евро</p>
         </div>
       </article>
-      <!-- Элемент корзины 2 -->
+
       <article class="cart__item">
         <h1>2.</h1>
-        <img src="img/products/2.jpg" alt="Набор транспорта «30-летие Warcraft»" />
+        <img src="img/products/2.jpg" alt="Аркана на тероблейда" />
         <div class="cart__item-info">
-          <h2>Набор транспорта «30-летие Warcraft»</h2>
-          <p>Стоимость: 70 евро</p>
+          <h2>Аркана на тероблейда</h2>
+          <p>Стоимость: 40 евро</p>
           <p>Количество: 1</p>
-          <p>Итого: 70 евро</p>
+          <p>Итого: 40 евро</p>
         </div>
       </article>
-      <!-- Можно добавить дополнительные товары -->
     </section>
 
-    <!-- Итоговая сумма заказа -->
     <section class="cart__summary">
-      <span class="cart__total">Общая сумма: 230 евро</span></p>
+      <span class="cart__total">Общая сумма: 90 евро</span></p>
       <button class="cart__checkout-btn">Оформить заказ</button>
     </section>
   </main>
 
-  <!-- Подвал сайта -->
   <footer>
     <nav class="footer__menu">
       <a href="index.html">Главная</a>
@@ -70,29 +67,28 @@
     </nav>
     <ul class="footer__social">
       <li>
-        <a href="https://x.com/warcraft" class="footer__link">
+        <a href="https://x.com/DOTA2?mx=2" class="footer__link">
           <img src="img/socials/x.png" alt="TwitterX link">
         </a>
       </li>
       <li>
-        <a href="https://www.instagram.com/warcraft/" class="footer__link">
+        <a href="https://www.instagram.com/dota_2/" class="footer__link">
           <img src="img/socials/instagram.png" alt="Instagram link">
         </a>
       </li>
       <li>
-        <a href="https://www.facebook.com/Warcraft/" class="footer__link">
+        <a href="https://www.facebook.com/dota2/" class="footer__link">
           <img src="img/socials/facebook.png" alt="Facebook link">
         </a>
       </li>
       <li>
-        <a href="https://www.youtube.com/user/worldofwarcraft" class="footer__link">
+        <a href="https://www.youtube.com/user/dota2/videos" class="footer__link">
           <img src="img/socials/youtube.webp" alt="YouTube link">
         </a>
       </li>
     </ul>
   </footer>
 
-  <!-- Подключение скриптов (если необходимо) -->
   <script src="js/button.js" defer></script>
 </body>
 </html>
